--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+#mine 
+2_chapter/data/
+*freq_distribs
+
+
 # vim
 *.swp
 *.swo
@@ -165,4 +170,3 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-2_chapter/data/
